src/main/java/com/example/realq/global/error/FieldErrorDetail.java
package com.example.realq.global.error;

public record FieldErrorDetail(String field, String message) {
}
